// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> rendered correctly with Add fixture 1`] = `
<Icon
  name="Add"
>
  <Icon
    name="Add"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Alarm fixture 1`] = `
<Icon
  name="Alarm"
>
  <Icon
    name="Alarm"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Alert fixture 1`] = `
<Icon
  name="Alert"
>
  <Icon
    name="Alert"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowDown fixture 1`] = `
<Icon
  name="ArrowDown"
>
  <Icon
    name="ArrowDown"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowLeft fixture 1`] = `
<Icon
  name="ArrowLeft"
>
  <Icon
    name="ArrowLeft"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowLeft fixture 2`] = `
<Icon
  name="ArrowLeft"
>
  <Icon
    name="ArrowLeft"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowRight fixture 1`] = `
<Icon
  name="ArrowRight"
>
  <Icon
    name="ArrowRight"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowRight fixture 2`] = `
<Icon
  name="ArrowRight"
>
  <Icon
    name="ArrowRight"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowUp fixture 1`] = `
<Icon
  name="ArrowUp"
>
  <Icon
    name="ArrowUp"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Bookings fixture 1`] = `
<Icon
  name="Bookings"
>
  <Icon
    name="Bookings"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Calendar fixture 1`] = `
<Icon
  name="Calendar"
>
  <Icon
    name="Calendar"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CaretRight fixture 1`] = `
<Icon
  name="CaretRight"
>
  <Icon
    name="CaretRight"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CheckBoxChecked fixture 1`] = `
<Icon
  name="CheckBoxChecked"
>
  <Icon
    name="CheckBoxChecked"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CheckBoxUnchecked fixture 1`] = `
<Icon
  name="CheckBoxUnchecked"
>
  <Icon
    name="CheckBoxUnchecked"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronDown fixture 1`] = `
<Icon
  name="ChevronDown"
>
  <Icon
    name="ChevronDown"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronLeft fixture 1`] = `
<Icon
  name="ChevronLeft"
>
  <Icon
    name="ChevronLeft"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronRight fixture 1`] = `
<Icon
  name="ChevronRight"
>
  <Icon
    name="ChevronRight"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronUp fixture 1`] = `
<Icon
  name="ChevronUp"
>
  <Icon
    name="ChevronUp"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Clock fixture 1`] = `
<Icon
  name="Clock"
>
  <Icon
    name="Clock"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Cross fixture 1`] = `
<Icon
  name="Cross"
>
  <Icon
    name="Cross"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CurvedArrow fixture 1`] = `
<Icon
  name="CurvedArrow"
>
  <Icon
    name="CurvedArrow"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Delete fixture 1`] = `
<Icon
  name="Delete"
>
  <Icon
    name="Delete"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with DeleteProfile fixture 1`] = `
<Icon
  name="DeleteProfile"
>
  <Icon
    name="DeleteProfile"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with DropDown fixture 1`] = `
<Icon
  name="DropDown"
>
  <Icon
    name="DropDown"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Edit fixture 1`] = `
<Icon
  name="Edit"
>
  <Icon
    name="Edit"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Ellipsis fixture 1`] = `
<Icon
  name="Ellipsis"
>
  <Icon
    name="Ellipsis"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Engage fixture 1`] = `
<Icon
  name="Engage"
>
  <Icon
    name="Engage"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with HealthEngine fixture 1`] = `
<Icon
  name="HealthEngine"
>
  <Icon
    name="HealthEngine"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with HealthEngineWithText fixture 1`] = `
<Icon
  name="HealthEngineWithText"
>
  <Icon
    name="HealthEngineWithText"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Help fixture 1`] = `
<Icon
  name="Help"
>
  <Icon
    name="Help"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Home fixture 1`] = `
<Icon
  name="Home"
>
  <Icon
    name="Home"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Language fixture 1`] = `
<Icon
  name="Language"
>
  <Icon
    name="Language"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Lock fixture 1`] = `
<Icon
  name="Lock"
>
  <Icon
    name="Lock"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Logout fixture 1`] = `
<Icon
  name="Logout"
>
  <Icon
    name="Logout"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Megaphone fixture 1`] = `
<Icon
  name="Megaphone"
>
  <Icon
    name="Megaphone"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Patients fixture 1`] = `
<Icon
  name="Patients"
>
  <Icon
    name="Patients"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Pencil fixture 1`] = `
<Icon
  name="Pencil"
>
  <Icon
    name="Pencil"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with RadioChecked fixture 1`] = `
<Icon
  name="RadioChecked"
>
  <Icon
    name="RadioChecked"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with RadioUnchecked fixture 1`] = `
<Icon
  name="RadioUnchecked"
>
  <Icon
    name="RadioUnchecked"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Search fixture 1`] = `
<Icon
  name="Search"
>
  <Icon
    name="Search"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Settings fixture 1`] = `
<Icon
  name="Settings"
>
  <Icon
    name="Settings"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Sync fixture 1`] = `
<Icon
  name="Sync"
>
  <Icon
    name="Sync"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Thumb fixture 1`] = `
<Icon
  name="Thumb"
>
  <Icon
    name="Thumb"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ThumbDark fixture 1`] = `
<Icon
  dark={true}
  name="Thumb"
>
  <Icon
    dark={true}
    name="Thumb"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ThumbDown fixture 1`] = `
<Icon
  down={true}
  name="Thumb"
>
  <Icon
    down={true}
    name="Thumb"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ThumbShadow fixture 1`] = `
<Icon
  name="Thumb"
  shadow={true}
>
  <Icon
    name="Thumb"
    shadow={true}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Tick fixture 1`] = `
<Icon
  name="Tick"
>
  <Icon
    name="Tick"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with UserShield fixture 1`] = `
<Icon
  name="UserShield"
>
  <Icon
    name="UserShield"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with UserShieldPrivacy fixture 1`] = `
<Icon
  name="UserShieldPrivacy"
>
  <Icon
    name="UserShieldPrivacy"
    shadow={false}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with View fixture 1`] = `
<Icon
  name="View"
>
  <Icon
    name="View"
    shadow={false}
  />
</Icon>
`;
